   via the built-in RIAP client (Restlet Internal Access Protocol). 
   Suggested by Marc Portier who contributed the test case.
 - Updated the Protocol and LocalReference classes with support for the new RIAP scheme.
 - In order to facilitate the implementation of your custom Finder, an new createTarget() method taking
   a Resource class in parameter. 
 - The context dispatchers automatically update the identifier property of response entities when they 
   are empty, based on the request's target URI.
 - Added support for the "Content-Disposition" field as a "fileName" property on Representation. 
   Contributed by Kevin Conaway.
 - Added a ResourceException to facilitate the mapping between domain exceptions and response status.
   Suggested by Paul J. Lucas and others.  
 - Replaced getPreferredRepresentation() and getRepresentation(Variant) methods by represent() and
   represent(Variant) methods throwing ResourceExceptions.
 - Added Reference.addQueryParameter() and addSegment() methods. Reported by Kevin Conaway.
 - Added SpringServer.setParameters(Properties) method. Contributed by Kevin Conaway.
 - Added Reference(Reference baseRef, Reference uriRef) constructor. Suggested by Rob Heittman.

[Misc]
 - Removed AsyncWeb connector, to be replaced by a custom MINA based one.
 - Removed Jetty 5 connector from the code base. Jetty 6 connector is stable enough now.
 - Added Response.locationRef property as a replacement for the Response.redirectRef
   property that is now deprecated. Suggested by Michael Vogel and Avi Flax.
 - Updated projects to Eclipse 3.3. Minor adjustments required.
 - The ConverterService and all related methods on Message are deprecated, with no replacement as it 
   doesn't fit well with content negotiation. Most users prefer to handle those conversion in Resource
   subclasses. Suggested by Justin Makeig, Rob Heittman, Sumit Lohia.
 
 