@@ -126,6 +126,8 @@ Changes log
  - Added Reference.addQueryParameter() and addSegment() methods. Reported by Kevin Conaway.
  - Added SpringServer.setParameters(Properties) method. Contributed by Kevin Conaway.
  - Added Reference(Reference baseRef, Reference uriRef) constructor. Suggested by Rob Heittman.
+ - Response.redirect*(String targetUri) methods now automatically resolve relative URIs agains the
+   base reference of the Request's resource reference. Suggested by Rob Heittman.
 
 [Misc]
  - Removed AsyncWeb connector, to be replaced by a custom MINA based one.
